deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperclip
spec:
  selector:
    app.kubernetes.io/name: paperclip
  ports:
    - name: http
      port: 3100
      targetPort: 3100
      protocol: TCP
