deploy/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: paperclip
spec:
  # Hostname is set per overlay
  host: "<ROUTE_HOSTNAME>"
  to:
    kind: Service
    name: paperclip
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
